crates/no_expect_outside_tests/examples/fail_expect_in_rstest_non_test_module.stderr
error: Avoid calling expect on `std::option::Option<&str>` outside test-only code.
  --> $DIR/fail_expect_in_rstest_non_test_module.rs:14:13
   |
LL |     let _ = parsed.expect("ordinary code must not inherit rstest harness status");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: The call originates within function `parse` which is not recognised as a test.
   = help: Handle the `None` variant of `std::option::Option<&str>` or move the code into a test.
   = note: requested on the command line with `-D no-expect-outside-tests`

error: aborting due to 1 previous error

